assets/css/style.css
:root {
  --color-bg: hsl(0, 0%, 90%);
  --color-bg-weak: hsl(0, 0%, 93%);
  --color-main: hsl(0, 0%, 30%);
  --color-sub: hsl(207, 38.80%, 16.70%);
  /* --font-serif: 'Noto Serif JP', serif; */
  --font-serif: 'Hina Mincho', serif;
  --font-sans: 'SF Pro JP','SF Pro Display','SF Pro Icons','Hiragino Kaku Gothic Pro','ヒラギノ角ゴ Pro W3','メイリオ','Meiryo','ＭＳ Ｐゴシック','Helvetica Neue','Helvetica','Arial',sans-serif;
  --font-sub: 'Caveat', cursive, var(--font-serif);
  --font-code: Courier, Monaco, 'Yu Gothic', 'YoGothic', monospace, sans-serif;
  --colomn-width: 72rem;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-bg: hsl(15deg, 8.33%, 9.41%);
    --color-bg-weak: hsl(15deg, 8.33%, 15.41%);
    --color-main: hsl(12deg, 24.1%, 71.6%);
    --color-sub: hsl(12deg, 24.1%, 91.6%);
  }
}

html {
  font-size: 10px;
  background-color: var(--color-bg);
  overflow-y: scroll;
  min-width: 300px;
}

body {
  font-family: var(--font-sans);
  font-feature-settings: "palt";
  font-optical-sizing: auto;

  font-size: 1.6rem;
  line-height: 2;
  letter-spacing: .012em;
  
  color: var(--color-main);
  margin: 1rem 1rem 10rem;
}

::selection {
  background: var(--color-main);
  color: var(--color-bg);
}

a {
  color: var(--color-main);
  /* text-decoration: none; */
  /* border-bottom: var(--color-main) 0.1em solid; */
  word-break: break-word;
}
a:visited {
  /* border-bottom: var(--color-sub) 0.1em solid; */
}
a:hover {
  color: var(--color-sub);
  text-decoration: underline;
}

/* //a.external:after {
//  display: inline;
//  font-size: 0.5em;
//  font-weight: 600;
//  content: '↗︎';
//  text-decoration: none !important;
//  border: #333 1px solid;
//  border-radius: 0.3em;
//  padding: 0.3em;
//} */

ul, ol {
  padding: 0;
}

main ul, main ol {
  padding: 0 0 0 2rem;
}

li ul, li ol {
  padding-left: 1.7em;
}

body > header {
  max-width: var(--colomn-width);
  margin: 3rem auto 0;
  position: relative;
}
body > header h1 {
  display: inline-block;
  position: relative;
  font-family: var(--font-sub);
  font-size: 4rem;
  line-height: 1.4;
  margin: 0;
  z-index: 11;
}
body > header h1 a {
  border-bottom: none;
  display: block;
  text-decoration: none;
}
body > header h1 ruby rt {
  display: none;
}
body > header h1 [data-ruby]:before {
  content: attr(data-ruby);
  position: absolute;
  top: -1em;
  left: 0.1em;
  margin: 0;
  font-size: 0.5em;
  width: 120%;
  letter-spacing: 0.9em;
}

body > header nav {
  margin: 0 auto;
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
}
body > header nav a {
  /* border-bottom: var(--color-main) 0.1em solid; */
  text-decoration: underline;
}
body > header nav a:visited {
  /* border-bottom: var(--color-main) 0.1em solid; */
}
@media (max-width: 420px) {
  body > header nav {
    display: none;
  }
}

body > header ul {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  margin: 0;
}
body > header ul li {
  font-family: var(--font-sub);
  /* font-weight: 700; */
  text-decoration: none;
  display: block;
  color: var(--color-main);
  font-size: 2.4rem;
  margin-left: 1.6rem;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-sans);
  line-height: 1.3;
}

h1 {
  font-weight: 600;
  margin: 3rem 0 1rem;
  font-size: 2.8rem;
}

h2, h3, h4, h5, h6 {
  margin: 6rem 0 2rem;
  font-weight: 400;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.6rem;
}

strong {
  background: hsla(350, 100%, 86%, 0.3);
  padding: 0.05em 0.2em;
  border-radius: 0.1em;
  box-shadow: inset hsla(350, 100%, 75%, 0.2) 0 -0.02em 0.1em 0.1em, hsla(350, 100%, 75%, 0.6) 0 0 0.05em 0.1em;
  margin: 0 -0.2em;
}

blockquote {
  margin: 0.5em 0;
  border-left: 0.2em hsl(0, 0%, 78%) solid;
  padding: 0.5em 0 0.5em 1em;
  background-color: var(--color-bg-weak);
}

.blog-title {
  font-size: 4rem;
  line-height: 1;
  font-family: var(--font-sub);
  font-weight: 400;
}

.article-list {
  list-style-type: none;
  font-family: var(--font-sans);
  margin: 5rem 0 0;
  padding: 0;
  
  li {
    font-size: 2rem;
    line-height: 1.4;
    margin-bottom: 3.6rem;
  }
  a {
    font-weight: 600;
    color: var(--color-sub);
    text-decoration: none;
    display: block;
    @media (max-width: 420px) {
      border: var(--color-bg-weak) 1px solid;
      padding: 2rem 1.5rem;
      border-radius: 1rem;
    }
  }
  a:hover {
    color: var(--color-sub);
    text-decoration: none;

    .article-list_title {
      text-decoration: underline;
    }
  }
  a:visited {
    color: var(--color-main);

    @media (max-width: 420px) {
      border: var(--color-bg-weak) 1px solid;
    }

    .article-list_title {
      text-decoration: underline;
    }
  }

  > .date {
    text-decoration: none;
  }
}

main {
  max-width: var(--colomn-width);
  margin: 9rem auto 4rem;
}

article header {
  margin: 0 0 2rem;
}

.date {
  font-family: var(--font-sub);
  font-size: 2rem;
  line-height: 1;
  /* // color: #999; */
}

.category {
  color: darkcyan;
  /* border-bottom: darkcyan 0.1em solid; */
  padding: 0.1em 1.2rem;
  border-radius: 0.2em;
  border: darkcyan 1px solid;
  font-family: var(--font-sub);
  font-size: 1.8rem;
  text-decoration: none !important;
}

figure {
  margin: 0 0 1rem;
}
figure > div {
  position: relative;
  background-color: var(--color-bg-weak);
  border-radius: 0.4rem;
  overflow: hidden;
}
figure img, figure video {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  margin: auto;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

figcaption {
  font-family: var(--font-sans);
  font-size: 1.2rem;
  color: var(--color-sub);
}

code {
  padding: 0.1em 0.3em;
  font-family: var(--font-code);
  border: var(--color-main) 0.01rem solid;
  border-radius: 0.2em;
  margin: 0 0.1em;

  word-wrap: break-word;
  white-space: pre-wrap;
  word-break: break-word;
}

pre {
  padding: 1rem;
  border-radius: 0.4rem;
  word-break: break-word;
  white-space: pre-wrap;

  & > code {
    border: none;
    /* color: #333; */
    padding: 1rem 0 1rem;
  }
}

img, iframe {
  max-width: 100%;
}

img {
  display: block;
}

.mark {
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  font-size: 1.2rem;
}
.mark > a {
  text-decoration: none;
  color: var(--color-main);
  margin-left: 1rem;
}

footer {
  max-width: var(--colomn-width);
  margin: 7em auto 0;
}

.support {
  margin-top: 5rem;
  border: 1px solid var(--color-sub);
  border-radius: 1rem;
  padding: 1rem;
  font-size: 1.4rem;
}

hr {
  border: 0.2rem solid var(--color-bg-weak);
  margin: 5rem auto;
}

.nav-open {
  display: none;
  position: fixed;
  bottom: 44px;
  bottom: calc(env(safe-area-inset-bottom) + 44px);
  left: 0;
  width: 100%;
  text-align: center;
  line-height: 2rem;
  font-size: 2rem;
  
  > a {
    font-family: var(--font-sub);
    font-weight: 300;
    display: none;
    text-decoration: none;
    z-index: 10;
    display: inline-block;
    background: var(--color-bg);
    padding: 0.3em 1.5em;
    border-radius: 0.3em;
    border: var(--color-main) 0.1em solid;
    position: relative;
    z-index: 1;
  }

  input {
    opacity: 0;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    pointer-events: none;
  }
}

.nav-float {
  font-family: var(--font-sub);
  font-weight: 700;
  line-height: 2rem;
  font-size: 2rem;
  position: fixed;
  display: none;
  top: 0;
  left: 0;
  z-index: 20;
  width: 100%;
  height: 100%;
  background: var(--color-main);
}
.nav-float.nav-float-active {
  display: block;
}
.nav-float a {
  color: var(--color-bg);
}
.nav-float nav {
  display: block;
  text-align: center;
  position: absolute;
  bottom: 44px;
  bottom: calc(env(safe-area-inset-bottom) + 44px);
  left: 50%;
  width: 12em;
  margin: 0 0 0 -6em;
}
.nav-float nav ul {
  list-style: none;
  margin: 0;
}
.nav-float nav li {
  margin: 2rem 0 0;
}
.nav-float nav a {
  padding: 0.5em 0;
  font-size: 2.2rem;
  display: inline-block;
  /* border-bottom: var(--color-bg) 0.1em solid; */
}

.nav-close a {
  display: block;
  margin-top: 5rem !important;
  font-weight: 300;
  font-size: 2rem;
  text-decoration: none;
  padding: 0.3em 1.5em !important;
  border-radius: 0.3em;
  border: var(--color-bg) 0.1em solid;
}

@media (max-width: 420px) {
  .nav-open {
    display: block;
  }
  h1 {
    font-size: 2.2rem;
  }
}

